apps/mglm-mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mglm-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: mglm-mongo-express
  template:
    metadata:
      labels:
        pod: mglm-mongo-express
    spec:
      containers:
        - image: mongo-express
          name: mongo-express
          ports:
            - name: http
              containerPort: 8081
          resources:
            limits:
              cpu: "1"
              memory: "512M"
            requests:
              cpu: "0.01"
              memory: "128M"
