apps/mglm-mongo-express/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mglm-mongo-express
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
    - name: wac-hospital-gateway
      namespace: wac-hospital-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mglm-mongo-express
      backendRefs:
        - group: ""
          kind: Service
          name: mglm-mongo-express
          port: 8081
